v5.0.0/llms/components/ix-custom-field.md
# ix-custom-field

> No component summary available.

## Documentation

- https://ix.siemens.io//docs/components/custom-field/guide.md

## Figma IDs

- 42365:52677

## Related examples

- custom-field
  - angular: [../../examples/angular-examples/src/preview-examples/custom-field.html](../../examples/angular-examples/src/preview-examples/custom-field.html), [../../examples/angular-examples/src/preview-examples/custom-field.ts](../../examples/angular-examples/src/preview-examples/custom-field.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/custom-field.html](../../examples/angular-standalone-examples/src/preview-examples/custom-field.html), [../../examples/angular-standalone-examples/src/preview-examples/custom-field.ts](../../examples/angular-standalone-examples/src/preview-examples/custom-field.ts)
  - html: [../../examples/html-examples/src/preview-examples/custom-field.html](../../examples/html-examples/src/preview-examples/custom-field.html)
  - react: [../../examples/react-examples/src/preview-examples/custom-field.tsx](../../examples/react-examples/src/preview-examples/custom-field.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/custom-field.vue](../../examples/vue-examples/src/preview-examples/custom-field.vue)
- custom-field-validation
  - angular: [../../examples/angular-examples/src/preview-examples/custom-field-validation.html](../../examples/angular-examples/src/preview-examples/custom-field-validation.html), [../../examples/angular-examples/src/preview-examples/custom-field-validation.ts](../../examples/angular-examples/src/preview-examples/custom-field-validation.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/custom-field-validation.html](../../examples/angular-standalone-examples/src/preview-examples/custom-field-validation.html), [../../examples/angular-standalone-examples/src/preview-examples/custom-field-validation.ts](../../examples/angular-standalone-examples/src/preview-examples/custom-field-validation.ts)
  - html: [../../examples/html-examples/src/preview-examples/custom-field-validation.html](../../examples/html-examples/src/preview-examples/custom-field-validation.html)
  - react: [../../examples/react-examples/src/preview-examples/custom-field-validation.tsx](../../examples/react-examples/src/preview-examples/custom-field-validation.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/custom-field-validation.vue](../../examples/vue-examples/src/preview-examples/custom-field-validation.vue)

## Related blocks

- unavailable (not present in registry JSON)

## Properties

- `helperText`; attr: `helper-text`; type: `string | undefined` - Show text below the field component which show additional information
- `infoText`; attr: `info-text`; type: `string | undefined` - Info text for the field component
- `invalidText`; attr: `invalid-text`; type: `string | undefined` - Error text for the field component
- `label`; attr: `label`; type: `string | undefined` - Label for the field component
- `required`; attr: `required`; type: `boolean`; default: `false` - A value is required or must be checked for the form to be submittable
- `showTextAsTooltip`; attr: `show-text-as-tooltip`; type: `boolean | undefined` - Show helper, info, warning, error and valid text as tooltip
- `validText`; attr: `valid-text`; type: `string | undefined` - Valid text for the field component
- `warningText`; attr: `warning-text`; type: `string | undefined` - Warning text for the field component

## Events

- None

## Slots

- None
